Add HTML structure for quote section and header section

--- a/index.html
+++ b/index.html
@@ -6,7 +6,21 @@
     <title>Motivational Quote Generator</title>
 </head>
 <body>
-    
+    <div id="main-container">
+        <header>
+            <img src="" alt="Motivational Image" class="hero-image">
+            <h1>Motivational Quote Generator</h1>
+        </header>
+        <main>
+            <section id="quote-section">
+                <div class="quote-div">
+                    <p class="quote-text" id="quote">Life is what you make it</p>
+                    <button class="quote-button" id="new-quote-button">Inspire Me</button>
+                </div>
+            </section>
+        </main>
+        <footer>
+        </footer>
     </div>
 </body>
 </html>
