Caching elements from DOM

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <main>
             <section id="quote-section">
                 <div class="quote-div">
-                    <p class="quote-text" id="quote">Life is what you make it</p>
-                    <button class="quote-button" id="new-quote-button">Inspire Me</button>
+                    <p class="quote-text" id="motivational-quote">Life is what you make it</p>
+                    <button class="quote-button" id="motivational-quote-button">Inspire Me</button>
                 </div>
             </section>
         </main>
