--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Motivational Quote Generator</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id="main-container">
@@ -22,5 +23,6 @@
         <footer>
         </footer>
     </div>
+    <script src="index.js"></script>
 </body>
 </html>
