--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div id="main-container">
         <header>
-            <img src="" alt="Motivational Image" class="hero-image">
+            <img src="/Images/sunsetmotivation.jpg" alt="Motivational Image" class="hero-image">
             <h1>Motivational Quote Generator</h1>
         </header>
         <main>
