Add form for user input in html

--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
                     <button class="quote-button" id="motivational-quote-button">Inspire Me</button>
                 </div>
             </section>
+            <form id="new-quote-form"> 
+                <label for="user-quote">Submit your own quote:</label>
+                <input type="text" id="user-quote" required placeholder="Enter your quote">
+                <button type="submit">Submit Quote</button>
+            </form>
         </main>
         <footer>
         </footer>
