Add event listerner on new custom quote form button

--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
                     <p class="quote-text" id="motivational-quote">Life is what you make it</p>
                     <button class="quote-button" id="motivational-quote-button">Inspire Me</button>
                 </div>
+                <form id="new-quote-form"> 
+                    <label for="user-quote">Submit your quote:</label>
+                    <input type="text" id="user-quote" required placeholder="Enter your quote">
+                    <button type="submit" id="new-quote-button">Submit Quote</button>
+                </form>
             </section>
-            <form id="new-quote-form"> 
-                <label for="user-quote">Submit your own quote:</label>
-                <input type="text" id="user-quote" required placeholder="Enter your quote">
-                <button type="submit">Submit Quote</button>
-            </form>
         </main>
         <footer>
         </footer>
